# fairweaver

./: .env.example  .gitignore  AGENTS.md  FRONTEND_INTEGRATION.md  Makefile  README.md  docker-compose.yml  feature_list.json  init.sh  opencode.jsonc  process_edal_file.py  test_arc_export.py  test_arc_integration.py  test_arc_template.py  test_conversion.py  test_demo_data.py
backend/: .dockerignore  Dockerfile  ai_client.py  arc_scaffold_builder.py  generate_datahub_scaffold.py  main.py  mapping_engine.py  oai_pmh.py  pivot_registry.yaml  pivot_registry.yaml.bak  pyproject.toml  requirements.txt
backend/arc_templates/: fairagro_template.yaml  fairagro_validator.py
backend/formats/: darwin_core_csv_plugin.py  datacite_xml_plugin.py  isa_json_plugin.py  oai_dc_plugin.py  ro_crate_plugin.py  schema_org_arc_plugin.py  schema_org_plugin.py
backend/mappings/: README.md  arc_ro_crate-fairagro_searchhub.yaml  darwin_core_csv-bioschemas_dataset.yaml  datacite-bioschemas_dataset.yaml  isa_json-agrischema_fieldtrial.yaml  oai_dc-fairagro_searchhub.yaml  ro_crate-agrischemas_cropvariety.yaml  ro_crate-agrischemas_fieldtrial.yaml  schema_org-arc_ro_crate.yaml
backend/plugins/: loader.py
backend/scripts/: build_wheat_full_scaffold.py
backend/tests/: test_arc_scaffold_builder.py  test_arc_to_agrischemas.py  test_darwin_core_csv_plugin.py  test_harvest_endpoint.py  test_live_preview.py  test_oai_pmh.py  test_ro_crate_miappe_extractors.py  test_ro_crate_miappe_integration.py  test_schema_org_to_arc_conversion.py  test_source_format_detection.py  (+2 more)
docs/: api-documentation.md  (+11 more)
(+105 files in other folders)
